# CMakeTestAlone

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  clean_and_build.sh
include/: MemManager.hpp  another_call.hpp  call.hpp
src/: .main.cpp.swp  MemManager.cpp  another_call.cpp  call.cpp  main.cpp
